refactor: #120 - 네이밍 변경 및 엔티티 수정
- RESTFUL API 네이밍에 맞춰 변경
- Formation -> Assignment로 변경
- member와 ClassRoom 다대다 연관관계로 변경
- 랜덤 반 편성시 임의로 편성된 반을 가지고 편성하는 것으로 변경

Change-Id: I81cffdac87a27c622bf2b23919e1978e923bfe57