@@ -1,7 +1,7 @@
 package com.otc.tinyclassroom.classformation.service;
 
-import com.otc.tinyclassroom.classformation.exception.ClassFormationErrorCode;
-import com.otc.tinyclassroom.classformation.exception.ClassFormationException;
+import com.otc.tinyclassroom.classformation.exception.ClassAssignmentErrorCode;
+import com.otc.tinyclassroom.classformation.exception.ClassAssignmentException;
 import com.otc.tinyclassroom.global.security.jwt.JwtProvider;
 import com.otc.tinyclassroom.member.dto.ClassRoomDto;
 import com.otc.tinyclassroom.member.dto.MemberDto;
@@ -13,6 +13,7 @@ import com.otc.tinyclassroom.member.repository.MemberRepository;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -26,7 +27,7 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional
 @RequiredArgsConstructor
-public class ClassFormationService {
+public class ClassAssignmentService {
 
     private final ClassRoomRepository classRoomRepository;
     private final MemberRepository memberRepository;
@@ -36,7 +37,8 @@ public class ClassFormationService {
      * 반 생성 메서드.
      */
     public ClassRoomDto createClassRoom(ClassRoomDto classRoomDto) {
-        ClassRoom classRoom = ClassRoom.of(classRoomDto.year(), classRoomDto.grade(), classRoomDto.number());
+        ClassRoom classRoom = ClassRoom.of(classRoomDto.year(), classRoomDto.grade(),
+            classRoomDto.number());
 
         ClassRoom savedClassRoom = classRoomRepository.save(classRoom);
 
@@ -49,14 +51,20 @@ public class ClassFormationService {
     public List<MemberDto> placeMembers(List<Long> memberIds, Long classRoomId) {
         ClassRoom classRoom = getClassRoomById(classRoomId);
         List<MemberDto> placedMembers = new ArrayList<>();
-
+        System.out.println("classRoom = " + classRoom);
+        System.out.println("placedMembers = " + placedMembers);
         for (Long memberId : memberIds) {
             Member existingMember = getMemberById(memberId);
-            existingMember.updateClassRoom(classRoom);
+            System.out.println("existingMember = " + existingMember);
+            // 만약 멤버가 이미 해당 반에 속해 있지 않다면, 추가합니다.
+            existingMember.getClassRooms().add(classRoom);
+            System.out.println("existingMember2 = " + existingMember);
             Member placedMember = memberRepository.save(existingMember);
+            System.out.println("placedMember = " + placedMember);
             placedMembers.add(MemberDto.from(placedMember));
+            System.out.println("placedMembers = " + placedMembers);
         }
-
+        System.out.println("placedMembers2 = " + placedMembers);
         return placedMembers;
     }
 
@@ -67,7 +75,11 @@ public class ClassFormationService {
         ClassRoom classRoom = getClassRoomById(classRoomId);
 
         Member existingMember = getMemberById(memberId);
-        existingMember.updateClassRoom(classRoom);
+
+        // 멤버의 반 목록을 초기화하고 새로운 반을 설정
+        Set<ClassRoom> classRooms = existingMember.getClassRooms();
+        classRooms.clear();
+        classRooms.add(classRoom);
 
         Member updatedMember = memberRepository.save(existingMember);
 
@@ -78,7 +90,7 @@ public class ClassFormationService {
      * 반 인원 목록 조회.
      */
     public List<MemberDto> getMembersByClassRoom(Long classRoomId) {
-        List<Member> members = memberRepository.findAllByClassRoomId(classRoomId);
+        List<Member> members = memberRepository.findAllByClassRoomsId(classRoomId);
 
         return members.stream().map(MemberDto::from).collect(Collectors.toList());
     }
@@ -88,45 +100,59 @@ public class ClassFormationService {
      */
     public void checkTeacherOrAdmin() {
         Long currentMemberId = Long.valueOf(jwtProvider.getCurrentUserId());
-        Member currentMember = memberRepository.findById(currentMemberId).orElseThrow(() -> new ClassFormationException(ClassFormationErrorCode.NO_AUTHORITY));
+        Member currentMember = memberRepository.findById(currentMemberId)
+            .orElseThrow(() -> new ClassAssignmentException(
+                ClassAssignmentErrorCode.NO_AUTHORITY));
         Role userRole = currentMember.getRole();
         if (userRole != Role.ROLE_TEACHER && userRole != Role.ROLE_ADMIN) {
-            throw new ClassFormationException(ClassFormationErrorCode.NO_AUTHORITY);
+            throw new ClassAssignmentException(ClassAssignmentErrorCode.NO_AUTHORITY);
         }
     }
 
 
     private ClassRoom getClassRoomById(Long classRoomId) {
-        return classRoomRepository.findById(classRoomId).orElseThrow(() -> new ClassFormationException(ClassFormationErrorCode.CLASSROOM_NOT_FOUND));
+        return classRoomRepository.findById(classRoomId)
+            .orElseThrow(() -> new ClassAssignmentException(
+                ClassAssignmentErrorCode.CLASSROOM_NOT_FOUND));
     }
 
     private Member getMemberById(Long memberId) {
-        return memberRepository.findById(memberId).orElseThrow(() -> new ClassFormationException(ClassFormationErrorCode.MEMBER_NOT_FOUND));
+        return memberRepository.findById(memberId).orElseThrow(() -> new ClassAssignmentException(
+            ClassAssignmentErrorCode.MEMBER_NOT_FOUND));
     }
 
     /**
-     * 랜덤으로 반 평성하기.
+     * 랜덤으로 반 편성하기.
      */
-    public List<MemberDto> randomFormationClassRooms(int targetGrade, int targetYear, int year1, int year2) {
+    public List<MemberDto> randomAssignmentClassRooms(Long targetGrade, Long targetYear,
+        Long targetClassRoomId) {
+        // 모든 멤버 및 반 정보 조회
         List<Member> allMembers = memberRepository.findAll();
         List<ClassRoom> allClassRooms = classRoomRepository.findAll();
 
-        // role이 1이고 year1과 year2 사이의 생일을 가진 멤버들 중에서 입력받은 grade의 반들만 골라내기
-        List<Member> students = new ArrayList<>(allMembers.stream()
-            .filter(member -> member.getRole() == Role.ROLE_STUDENT && member.getBirthday().getYear() >= year1 && member.getBirthday().getYear() <= year2)
-            .toList());
+        // 학생인 멤버들만 추출
+        List<Member> students = allMembers.stream()
+            .filter(member -> member.getRole() == Role.ROLE_STUDENT)
+            .toList();
+
+        // targetClassRoomId에 해당하는 반의 멤버만 남기기
+        List<Member> filteredMembers = students.stream()
+            .filter(member -> member.getClassRooms().stream()
+                .anyMatch(classRoom -> classRoom.getId().equals(targetClassRoomId)))
+            .collect(Collectors.toList());
 
         // 입력받은 grade, targetYear의 반들만 골라내기
         List<ClassRoom> targetClassRooms = allClassRooms.stream()
-            .filter(classRoom -> classRoom.getGrade() == targetGrade && classRoom.getYear() == targetYear)
+            .filter(classRoom -> classRoom.getGrade() == targetGrade
+                && classRoom.getYear() == targetYear)
             .toList();
 
         // 멤버들을 랜덤한 순서로 섞기
-        Collections.shuffle(students);
+        Collections.shuffle(filteredMembers);
 
         // 남은 학생들에 대해 처음 반부터 다시 반복하여 배정
         int studentIndex = 0;
-        for (Member student : students) {
+        for (Member student : filteredMembers) {
             // 현재 반에 배정할 수 있는지 확인
             if (studentIndex >= targetClassRooms.size()) {
                 // 남은 반이 없으면 처음 반으로 돌아가기
@@ -135,15 +161,16 @@ public class ClassFormationService {
 
             // 현재 학생에게 현재 반 배정
             ClassRoom currentClassRoom = targetClassRooms.get(studentIndex);
-            student.updateClassRoom(currentClassRoom);
+            student.getClassRooms().add(currentClassRoom);
 
             // 다음 반으로 넘어가기
             studentIndex++;
         }
 
         // 저장된 멤버 엔터티들을 DTO로 변환하여 반환
-        return students.stream()
+        return filteredMembers.stream()
             .map(MemberDto::from)
             .collect(Collectors.toList());
     }
 }
+
